# errantibus

./: .gitignore  CMakeLists.txt  Readme.md
includes/: errantibus.hpp
includes/mode/: errantibusDebug.hpp  errantibusNoDebug.hpp
src/: errantibus.cpp
